---------------------------

Dmitry Baikov
Gabriel M. Beddingfield
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille

---------------------------
  Jackdmp changes log
---------------------------

2010-06-29 Stephane Letz  <letz@grame.fr>

	* Arnold Krille irewire snooping patch.

2010-06-16 Stephane Letz  <letz@grame.fr>

	* David Garcia Garzon unused_pkt_buf_field_jack2 netone patch.

2010-06-13 Stephane Letz  <letz@grame.fr>

	* Fix JackPosixSemaphore::TimedWait : same behavior as JackPosixSemaphore::Wait regarding EINTR.

2010-05-31 Stephane Letz  <letz@grame.fr>

	* Fix from Fernando Lopez-Lezcano for compilation on fc13.

2010-05-30 Stephane Letz  <letz@grame.fr>

	* David Garcia Garzon netone patch.

2010-05-27 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudioDriver, move code called in MeasureCallback to be called once in IO thread.

2010-05-07 Stephane Letz  <letz@grame.fr>

	* Add tests to validate intclient.h API.
	* On Linux, inter-process synchronization primitive switched to POSIX semaphore.

2010-04-16 Stephane Letz  <letz@grame.fr>

	* Make jack_connect/jack_disconnect wait for effective port connection/disconnection.

2010-04-07 Stephane Letz  <letz@grame.fr>

	* Remove call to exit in library code.

2010-03-26 Stephane Letz  <letz@grame.fr>

	* ffado-portname-sync.patch from ticket #163 applied.

2010-03-24 Stephane Letz  <letz@grame.fr>

	* On Windows, now use TRE library for regexp (BSD license instead of GPL license).

2010-03-19 Stephane Letz  <letz@grame.fr>

	* Fix some file header to have library side code use LGPL.
	* Apply srcfactor.diff patch for ticket #162.

2010-03-06 Stephane Letz  <letz@grame.fr>

	* Arnold Krille firewire patch.